kubernetes/cart-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cart
  name: cart
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cart
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
        - image: rahmaahmed2002/depi_gp-cart-service:v1
          name: cart-service
          ports:
            - containerPort: 3003
          resources:
            requests:
              memory: "200Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: cart
  name: cart
spec:
  ports:
  - port: 3003
    protocol: TCP
    targetPort: 3003
  selector:
    app: cart
  type: ClusterIP
