kubernetes/cart-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cart
  name: cart
spec:
  ports:
  - port: 3003
    protocol: TCP
    targetPort: 3003
  selector:
    app: cart
  type: ClusterIP
