kubernetes/mongo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  clusterIP: None  # headless service for statefulset
  selector:
    app: mongodb   
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
