kubernetes/product-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: product
  name: product
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - image: rahmaahmed2002/depi_gp-product-service:v1
          name: product-service
          ports:
            - containerPort: 3002
          resources:
            requests:
              memory: "200Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: product
  name: product
spec:
  ports:
  - port: 3002
    protocol: TCP
    targetPort: 3002
  selector:
    app: product
  type: ClusterIP
