kubernetes/product-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: product
  name: product
spec:
  ports:
  - port: 3002
    protocol: TCP
    targetPort: 3002
  selector:
    app: product
  type: ClusterIP
