kubernetes/user-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: user
  name: user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - image: rahmaahmed2002/depi_gp-user-service:v1
          name: user-service
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "200Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user
  name: user
spec:
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
  selector:
    app: user
  type: ClusterIP
