kubernetes/user-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user
  name: user
spec:
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: user
  type: ClusterIP
