kubernetes/traefik-ingress.yml
# route for frontend
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-route
spec:
  entryPoints:
    - web # port 80
  routes:
  - kind: Rule
    # Rule on the Host
    match: PathPrefix(`/`)
    # Set a priority
    priority: 1
    services:
    # Target a Kubernetes Service
    - kind: Service
      name: frontend
      # Customize the connection between Traefik and the backend
      port: 3000

---

# route for user service
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: user-route
spec:
  entryPoints:
    - web # port 80
  routes:
  - kind: Rule
    # Rule on the Host
    match: PathPrefix(`/api/user`)
    # Attach a middleware
    middlewares:
    - name: user-mw
    # Set a priority
    priority: 10
    services:
    # Target a Kubernetes Service
    - kind: Service
      name: user
      # Customize the connection between Traefik and the backend
      port: 3001

---

# route for product service
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: product-route
spec:
  entryPoints:
    - web # port 80
  routes:
  - kind: Rule
    # Rule on the Host
    match: PathPrefix(`/api/product`)
    # Attach a middleware
    middlewares:
    - name: product-mw
    # Set a priority
    priority: 10
    services:
    # Target a Kubernetes Service
    - kind: Service
      name: product
      # Customize the connection between Traefik and the backend
      port: 3002

---

# route for cart service
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cart-route
spec:
  entryPoints:
    - web # port 80
  routes:
  - kind: Rule
    # Rule on the Host
    match: PathPrefix(`/api/cart`)
    # Attach a middleware
    middlewares:
    - name: cart-mw
    # Set a priority
    priority: 10
    services:
    # Target a Kubernetes Service
    - kind: Service
      name: cart
      # Customize the connection between Traefik and the backend
      port: 3003

---

# Strip prefix /api/user
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: user-mw
spec:
  stripPrefix:
    prefixes:
      - /api/user

---

# Strip prefix /api/product
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: product-mw
spec:
  stripPrefix:
    prefixes:
      - /api/product

---

# Strip prefix /api/cart
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cart-mw
spec:
  stripPrefix:
    prefixes:
      - /api/cart
